<resources>
    <string name="app_name">Library</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_activity_author">AuthorActivity</string>
    <string name="id">ID</string>
    <string name="name">Name</string>
    <string name="title">Title</string>
    <string name="delete">Delete</string>
    <string name="authors">Authors</string>
    <string name="books">Books</string>
    <string name="author">Author</string>
    <string name="book">Book</string>
    <string name="genres">Genres</string>
    <string name="genre">Genre</string>
    <string name="description">Description</string>
</resources>
