<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
>


    <TextView
            android:text="@string/id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintBottom_toBottomOf="@+id/id"
            app:layout_constraintTop_toTopOf="@+id/id"/>


    <TextView
            android:layout_width="0dp"
            android:layout_height="24dp" android:id="@+id/id" android:textSize="18sp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" tools:text="=ID"
            app:layout_constraintStart_toStartOf="@+id/name"/>
    <TextView
            android:text="@string/name"
            android:layout_width="38dp"
            android:layout_height="19dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/name" app:layout_constraintTop_toTopOf="@+id/name"
            android:id="@+id/textView3"/>
    <TextView
            android:text="@string/author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@+id/author" app:layout_constraintBottom_toBottomOf="@+id/author"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/name" android:autofillHints="" tools:targetApi="o"
            app:layout_constraintTop_toBottomOf="@+id/id" app:layout_constraintStart_toEndOf="@+id/textView6"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            tools:text="=Name" android:layout_marginStart="8dp"/>
    <Button
            android:text="@android:string/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/cancel"
            style="@style/Widget.AppCompat.Button"
            app:layout_constraintEnd_toStartOf="@+id/delete" app:layout_constraintBottom_toBottomOf="@+id/delete"
            android:layout_marginEnd="8dp"/>
    <Button
            android:text="@string/delete"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/delete"
            style="@style/Widget.AppCompat.Button"
            app:layout_constraintEnd_toStartOf="@+id/ok"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/ok"/>
    <Button
            android:text="@android:string/ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/ok"
            style="@style/Widget.AppCompat.Button"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toBottomOf="@+id/genre" android:layout_marginTop="8dp"/>
    <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/name" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/author"
            app:layout_constraintTop_toBottomOf="@+id/description" android:layout_marginTop="8dp"/>
    <TextView
            android:text="@string/genre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/author"
            app:layout_constraintBottom_toBottomOf="@+id/genre"/>
    <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/genre"
            app:layout_constraintStart_toStartOf="@+id/author"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/author" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"/>
    <TextView
            android:text="@string/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView6"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@+id/description"
            app:layout_constraintBottom_toBottomOf="@+id/description"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:gravity="start|top"
            android:ems="10"
            android:id="@+id/description"
            app:layout_constraintStart_toStartOf="@+id/name" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/name" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
